# NNGU_labs

3sem_lab1/: Polynomial.cpp  Polynomial.h  TableManager.h  main.cpp
3sem_lab1/Parser/: Formula.h  Phrase.h
3sem_lab1/Tables/: ArraySortTable.h  HashTableList.h  Table.h  TableArray.cpp  TableArray.h  TableHash.h
3sem_lab1/Tests/: test_ArraySortTable.cpp  test_HashTableList.cpp  test_TableHash.cpp  test_TableList.cpp  test_TableTreeAVL.cpp
3sem_lab1/VS_project/: VS_project.vcxproj.filters
3sem_lab1/Visual/: TConsole.h  Visual.cpp  Visual.h
3sem_lab2/: .gitignore
3sem_lab2/Debug/: AlyaPascal.ilk
3sem_lab2/HeaderFiles/: Compiler.h  CompilerExceptions.h  Part.h  TConsole.h  Var.h  Visual.h
MobileSystem-Lab/Pract_MS_7/app/: CMakeLists.txt  build.gradle
MobileSystem-Lab/Pract_MS_7/app/src/androidTest/java/com/example/pract_ms_7/: ExampleInstrumentedTest.kt
MobileSystem-Lab/Pract_MS_7/app/src/main/: AndroidManifest.xml
MobileSystem-Lab/Pract_MS_7/app/src/main/cpp/: Counter.cpp  Counter.h  Dictionary.cpp  Dictionary.h  Tools.cpp  Tools.h
MobileSystem-Lab/Pract_MS_7/app/src/main/java/com/example/pract_ms_7/: CounterActivity.kt  DictionaryActivity.kt
MobileSystem-Lab/Pract_MS_7/app/src/main/res/layout/: activity_counter.xml  activity_dictionary.xml
MobileSystem-Lab/Pract_MS_7/app/src/main/res/values/: strings.xml  themes.xml
MobileSystem-Lab/Pract_MS_7/app/src/main/res/values-night/: themes.xml
MobileSystem-Lab/Pract_MS_7/app/src/test/java/com/example/pract_ms_7/: ExampleUnitTest.kt
Network-App/: Readme.md  database.db
mp-lab5-Polinom/: README.md
(+469 files in other folders)
